unpackaged/main/default/objects/Account/fields/Account_Additional_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Additional_Name__c</fullName>
    <description>Ticket SL-334: NEW Field Account: &quot;Account Zusatz&quot;, &quot;Account Beziehungsart&quot;</description>
    <inlineHelpText>Beschreibt den Namen des Kunden unter dem er bekannt ist, der aber nicht  der tatsächlichen rechtlichen Firmierung entspricht.</inlineHelpText>
    <label>Account Additional Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>