unpackaged/main/default/objects/Account/fields/Account_Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Relationship_Type__c</fullName>
    <description>Ticket SL-334: NEW Field Account: &quot;Account Zusatz&quot;, &quot;Account Beziehungsart&quot;</description>
    <inlineHelpText>Beschreibt die Beziehung diesen Accounts zum übergeordneten Account.</inlineHelpText>
    <label>Account Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Subsidiary</fullName>
            </value>
            <value>
                <fullName>Branch Office</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Franchise/ Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>