unpackaged/main/default/objects/Account/fields/Account_Sperre_Status_Helper__c.field-meta.xml
<CustomField>
    <fullName>Account_Sperre_Status_Helper__c</fullName>
    <description>Account Sperre nicht wenn von SAP &quot;Inaktiv&quot; als Grund kommt, sonst bei allen anderen Ursachen</description>
    <formula>OR(
LKM_KundenKontaktsperre__c, and(CL_Auftragssperre__c,not(ispickval(CL_AuftragssperreGrund__c ,&quot;Inaktiv&quot;)) ), CL_Fakturasperre__c, CL_ZurBearbeitungGesperrt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sperre Status Helper</label>
    <type>Checkbox</type>
</CustomField>