unpackaged/main/default/objects/Account/fields/AgilePointLockStatus__c.field-meta.xml
<CustomField>
    <fullName>AgilePointLockStatus__c</fullName>
    <label>AgilePointLockStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unlocked</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>