unpackaged/main/default/objects/Account/fields/AgilePointOpportunitySum__c.field-meta.xml
<CustomField>
    <fullName>AgilePointOpportunitySum__c</fullName>
    <description>Created for [SL-401]</description>
    <inlineHelpText>Created for [SL-401]</inlineHelpText>
    <label>AgilePointOpportunitySum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>