unpackaged/main/default/objects/Account/fields/Anzahl_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Anzahl_Opportunity__c</fullName>
    <label>Anzahl Opportunity</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>