unpackaged/main/default/objects/Account/fields/beServe__beServeData__c.field-meta.xml
<CustomField>
    <fullName>beServe__beServeData__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <description>beServe Daten</description>
    <label>beServeData</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>