unpackaged/main/default/objects/Account/fields/beServe__BIPID__c.field-meta.xml
<CustomField>
    <fullName>beServe__BIPID__c</fullName>
    <label>BIPID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>