unpackaged/main/default/objects/Account/fields/beServe__CompanyState__c.field-meta.xml
<CustomField>
    <fullName>beServe__CompanyState__c</fullName>
    <label>CompanyState</label>
    <length>60</length>
    <type>Text</type>
</CustomField>