unpackaged/main/default/objects/Account/fields/beServe__HR_NUMMERZUS__c.field-meta.xml
<CustomField>
    <fullName>beServe__HR_NUMMERZUS__c</fullName>
    <label>HR_NUMMERZUS</label>
    <length>5</length>
    <type>Text</type>
</CustomField>