unpackaged/main/default/objects/Account/fields/BeServe_Status_ID__c.field-meta.xml
<CustomField>
    <fullName>BeServe_Status_ID__c</fullName>
    <description>BeServe: ID zum Unternehmensstatus</description>
    <label>BeServe Status ID</label>
    <type>TextArea</type>
</CustomField>