unpackaged/main/default/objects/Account/fields/BeServe_Status_ID_Text__c.field-meta.xml
<CustomField>
    <fullName>BeServe_Status_ID_Text__c</fullName>
    <description>BeServe: Text zum Unternehmensstatus</description>
    <label>BeServe Status ID Text</label>
    <type>TextArea</type>
</CustomField>