unpackaged/main/default/objects/Account/fields/Betreuungsbedarf__c.field-meta.xml
<CustomField>
    <fullName>Betreuungsbedarf__c</fullName>
    <label>Betreuungsbedarf</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quartalsweise Ansprache</fullName>
            </value>
            <value>
                <fullName>Jährliche Ansprache</fullName>
            </value>
            <value>
                <fullName>Kein Betreuungsbedarf</fullName>
            </value>
            <value>
                <fullName>Halbjährige Ansprache</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>