unpackaged/main/default/objects/Account/fields/Bonit_t__c.field-meta.xml
<CustomField>
    <fullName>Bonit_t__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(CL_Risikoklasse__c, &quot;sehr kritisch&quot;),ISPICKVAL(CL_Risikoklasse__c, &quot;nicht kreditwürdig&quot;)),
IMAGE(&quot;https://stroeer-eins--c.eu43.content.force.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0686900000Nztdd&amp;operationContext=CHATTER&amp;contentId=05T6900001KpUnr&quot;,&quot; &quot;,30,30),
&quot; &quot;)</formula>
    <label>Bonität</label>
    <type>Text</type>
</CustomField>