unpackaged/main/default/objects/Account/fields/Branchedetail_RH__c.field-meta.xml
<CustomField>
    <fullName>Branchedetail_RH__c</fullName>
    <label>RH Branchedetail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arbeitsbühne</fullName>
            </value>
            <value>
                <fullName>Architektur</fullName>
            </value>
            <value>
                <fullName>Balkonbau</fullName>
            </value>
            <value>
                <fullName>Bühnenbau</fullName>
            </value>
            <value>
                <fullName>Gerüstbau</fullName>
            </value>
            <value>
                <fullName>Hausbau</fullName>
            </value>
            <value>
                <fullName>Heizsysteme</fullName>
            </value>
            <value>
                <fullName>Klimatechnik</fullName>
            </value>
            <value>
                <fullName>Küchenbau</fullName>
            </value>
            <value>
                <fullName>Ladenbau</fullName>
            </value>
            <value>
                <fullName>Maschinenbau</fullName>
            </value>
            <value>
                <fullName>Poolbau</fullName>
            </value>
            <value>
                <fullName>Sanierung</fullName>
            </value>
            <value>
                <fullName>Saunabau</fullName>
            </value>
            <value>
                <fullName>Schimmelbeseitigung</fullName>
            </value>
            <value>
                <fullName>Solaranlage</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
            <value>
                <fullName>Straßenbau</fullName>
            </value>
            <value>
                <fullName>Teichbau</fullName>
            </value>
            <value>
                <fullName>Terrassenbau</fullName>
            </value>
            <value>
                <fullName>Trockenbau</fullName>
            </value>
            <value>
                <fullName>Überdachung</fullName>
            </value>
            <value>
                <fullName>Zaunbau</fullName>
            </value>
            <value>
                <fullName>Friseur</fullName>
            </value>
            <value>
                <fullName>Fußpflege</fullName>
            </value>
            <value>
                <fullName>Haarentfernung</fullName>
            </value>
            <value>
                <fullName>Haartransplantation</fullName>
            </value>
            <value>
                <fullName>Hundesalon</fullName>
            </value>
            <value>
                <fullName>Kosmetikstudio</fullName>
            </value>
            <value>
                <fullName>Massage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>