unpackaged/main/default/objects/Account/fields/Check_Data_Field__c.field-meta.xml
<CustomField>
    <fullName>Check_Data_Field__c</fullName>
    <label>Check Data Feld</label>
    <length>255</length>
    <type>Text</type>
</CustomField>