unpackaged/main/default/objects/Account/fields/CL_AbgelehnteNeuanlageCS1CS2__c.field-meta.xml
<CustomField>
    <fullName>CL_AbgelehnteNeuanlageCS1CS2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Abgelehnte Neuanlage/Änderung CS1/CS2</label>
    <type>Checkbox</type>
</CustomField>