unpackaged/main/default/objects/Account/fields/CL_AblehnungstextCS1CS2__c.field-meta.xml
<CustomField>
    <fullName>CL_AblehnungstextCS1CS2__c</fullName>
    <label>Ablehnungstext CS1/CS2</label>
    <length>250</length>
    <type>Text</type>
</CustomField>