unpackaged/main/default/objects/Account/fields/CL_Account_ID_in_SF2_komplett__c.field-meta.xml
<CustomField>
    <fullName>CL_Account_ID_in_SF2_komplett__c</fullName>
    <formula>CASESAFEID(CL_AccountIDInSF2__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account_ID_in_SF2_komplett</label>
    <type>Text</type>
</CustomField>