unpackaged/main/default/objects/Account/fields/CL_AccountIDinSF1__c.field-meta.xml
<CustomField>
    <fullName>CL_AccountIDinSF1__c</fullName>
    <label>Account ID in SF1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>