unpackaged/main/default/objects/Account/fields/CL_AccountIDInSF2__c.field-meta.xml
<CustomField>
    <fullName>CL_AccountIDInSF2__c</fullName>
    <label>Account ID in SF2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>