unpackaged/main/default/objects/Account/fields/CL_AccountIDInSF3__c.field-meta.xml
<CustomField>
    <fullName>CL_AccountIDInSF3__c</fullName>
    <label>Account ID in SF3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>