unpackaged/main/default/objects/Account/fields/CL_AccountNameVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_AccountNameVorher__c</fullName>
    <label>Account Name Vorher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>