unpackaged/main/default/objects/Account/fields/CL_AngefordertVon__c.field-meta.xml
<CustomField>
    <fullName>CL_AngefordertVon__c</fullName>
    <label>Angefordert von</label>
    <length>18</length>
    <type>Text</type>
</CustomField>