unpackaged/main/default/objects/Account/fields/CL_AnlagePWSAlsAgentur__c.field-meta.xml
<CustomField>
    <fullName>CL_AnlagePWSAlsAgentur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anlage PWS als Agentur</label>
    <type>Checkbox</type>
</CustomField>