unpackaged/main/default/objects/Account/fields/CL_AnlagePWSAlsDebitor__c.field-meta.xml
<CustomField>
    <fullName>CL_AnlagePWSAlsDebitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anlage PWS als Debitor</label>
    <type>Checkbox</type>
</CustomField>