unpackaged/main/default/objects/Account/fields/CL_AnlagePWSAlsWerbungtreibender__c.field-meta.xml
<CustomField>
    <fullName>CL_AnlagePWSAlsWerbungtreibender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anlage PWS als Werbungtreibender</label>
    <type>Checkbox</type>
</CustomField>