unpackaged/main/default/objects/Account/fields/CL_Antrag_CS2__c.field-meta.xml
<CustomField>
    <fullName>CL_Antrag_CS2__c</fullName>
    <description>Hilfsfeld:  Rückmeldung aus SAP via SST1.2 über Zustand des CS2 Clearings</description>
    <label>Antrag CS2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abgelehnt (Ändern)</fullName>
            </value>
            <value>
                <fullName>Abgelehnt (Löschen)</fullName>
            </value>
            <value>
                <fullName>Abgelehnt (Neu)</fullName>
            </value>
            <value>
                <fullName>Ändern</fullName>
            </value>
            <value>
                <fullName>Ändern (Vorbehalt)</fullName>
            </value>
            <value>
                <fullName>Löschen</fullName>
            </value>
            <value>
                <fullName>Neu</fullName>
            </value>
            <value>
                <fullName>Neu (Vorbehalt)</fullName>
            </value>
            <value>
                <fullName>Genehmigt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>