unpackaged/main/default/objects/Account/fields/CL_Auftragssperre__c.field-meta.xml
<CustomField>
    <fullName>CL_Auftragssperre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auftragssperre</label>
    <type>Checkbox</type>
</CustomField>