unpackaged/main/default/objects/Account/fields/CL_AuftragssperreGrund__c.field-meta.xml
<CustomField>
    <fullName>CL_AuftragssperreGrund__c</fullName>
    <label>Auftragssperre Grund</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Abgabe Inkasso</fullName>
            </value>
            <value>
                <fullName>Dublette</fullName>
            </value>
            <value>
                <fullName>eidesstattl.Vers.</fullName>
            </value>
            <value>
                <fullName>Gegengeschäft</fullName>
            </value>
            <value>
                <fullName>Inaktiv</fullName>
            </value>
            <value>
                <fullName>Inkasso MIC</fullName>
            </value>
            <value>
                <fullName>InsoVerf.eingeleitet</fullName>
            </value>
            <value>
                <fullName>Konzerndebitor</fullName>
            </value>
            <value>
                <fullName>Limitüberschreitung</fullName>
            </value>
            <value>
                <fullName>Liquidation</fullName>
            </value>
            <value>
                <fullName>Nichtzahlung 2.Mahnu</fullName>
            </value>
            <value>
                <fullName>nur für Finanzbuchh.</fullName>
            </value>
            <value>
                <fullName>nur Rechnungsempfäng</fullName>
            </value>
            <value>
                <fullName>ooB D&amp;B</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>schlechte Bonität</fullName>
            </value>
            <value>
                <fullName>Sonderfälle</fullName>
            </value>
            <value>
                <fullName>Testsperre</fullName>
            </value>
            <value>
                <fullName>unbekannt verzogen</fullName>
            </value>
            <value>
                <fullName>Vergl. geschlossen</fullName>
            </value>
            <value>
                <fullName>Verschmelzung</fullName>
            </value>
            <value>
                <fullName>Werbegemeinschaft</fullName>
            </value>
            <value>
                <fullName>wgGeringf.ausgebucht</fullName>
            </value>
            <value>
                <fullName>Zwangsvollst.fruchtl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>