unpackaged/main/default/objects/Account/fields/CL_Ayuda__c.field-meta.xml
<CustomField>
    <fullName>CL_Ayuda__c</fullName>
    <label>Ayuda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>