unpackaged/main/default/objects/Account/fields/CL_BillingCityVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_BillingCityVorher__c</fullName>
    <label>Ort Vorher</label>
    <length>40</length>
    <type>Text</type>
</CustomField>