unpackaged/main/default/objects/Account/fields/CL_BillingCountryVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_BillingCountryVorher__c</fullName>
    <label>Land Vorher</label>
    <length>40</length>
    <type>Text</type>
</CustomField>