unpackaged/main/default/objects/Account/fields/CL_BillingPostalCodeVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_BillingPostalCodeVorher__c</fullName>
    <label>PLZ Vorher</label>
    <length>20</length>
    <type>Text</type>
</CustomField>