unpackaged/main/default/objects/Account/fields/CL_BillingStateVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_BillingStateVorher__c</fullName>
    <label>Bundesland Vorher</label>
    <length>25</length>
    <type>Text</type>
</CustomField>