unpackaged/main/default/objects/Account/fields/CL_BillingStreetVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_BillingStreetVorher__c</fullName>
    <label>Straße / Hausnummer Vorher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>