unpackaged/main/default/objects/Account/fields/CL_BrancheSF2__c.field-meta.xml
<CustomField>
    <fullName>CL_BrancheSF2__c</fullName>
    <label>Branche SF2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>