unpackaged/main/default/objects/Account/fields/CL_BrancheSF3__c.field-meta.xml
<CustomField>
    <fullName>CL_BrancheSF3__c</fullName>
    <label>Branche SF3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>