unpackaged/main/default/objects/Account/fields/CL_businessAD__c.field-meta.xml
<CustomField>
    <fullName>CL_businessAD__c</fullName>
    <label>businessAD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>