unpackaged/main/default/objects/Account/fields/CL_CS1InBearbeitung__c.field-meta.xml
<CustomField>
    <fullName>CL_CS1InBearbeitung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS1 in Bearbeitung</label>
    <type>Checkbox</type>
</CustomField>