unpackaged/main/default/objects/Account/fields/CL_CS2InBearbeitung__c.field-meta.xml
<CustomField>
    <fullName>CL_CS2InBearbeitung__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CS2 in Bearbeitung</label>
    <type>Checkbox</type>
</CustomField>