unpackaged/main/default/objects/Account/fields/CL_DATAlovers__c.field-meta.xml
<CustomField>
    <fullName>CL_DATAlovers__c</fullName>
    <label>DATAlovers</label>
    <length>20</length>
    <type>Text</type>
</CustomField>