unpackaged/main/default/objects/Account/fields/CL_DB__c.field-meta.xml
<CustomField>
    <fullName>CL_DB__c</fullName>
    <externalId>true</externalId>
    <label>D&amp;B</label>
    <length>20</length>
    <type>Text</type>
</CustomField>