unpackaged/main/default/objects/Account/fields/CL_DebitorenNr__c.field-meta.xml
<CustomField>
    <fullName>CL_DebitorenNr__c</fullName>
    <label>Debitoren-Nr.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>