unpackaged/main/default/objects/Account/fields/CL_DetailTypVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_DetailTypVorher__c</fullName>
    <label>Detail-Typ Vorher</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agentur</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Spezialagentur</fullName>
            </value>
            <value>
                <fullName>Vertriebspartner</fullName>
            </value>
            <value>
                <fullName>Werbungtreibender</fullName>
            </value>
            <value>
                <fullName>Event-/Promotionagentur</fullName>
            </value>
            <value>
                <fullName>Kreativagentur</fullName>
            </value>
            <value>
                <fullName>Mediaagentur</fullName>
            </value>
            <value>
                <fullName>Online-/Digitalagentur</fullName>
            </value>
            <value>
                <fullName>PR-Agentur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>