unpackaged/main/default/objects/Account/fields/CL_DigitalMediaProducts__c.field-meta.xml
<CustomField>
    <fullName>CL_DigitalMediaProducts__c</fullName>
    <label>Digital Media Products</label>
    <length>20</length>
    <type>Text</type>
</CustomField>