unpackaged/main/default/objects/Account/fields/CL_DrucksteuerungSMVBelegeVG1__c.field-meta.xml
<CustomField>
    <fullName>CL_DrucksteuerungSMVBelegeVG1__c</fullName>
    <label>Drucksteuerung SMV Belege  (VG1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ohne Gültigkeit</fullName>
                <default>true</default>
                <label>ohne Gültigkeit</label>
            </value>
            <value>
                <fullName>pro Kunde 1 SMV</fullName>
            </value>
            <value>
                <fullName>pro Produkt 1 SMV</fullName>
            </value>
            <value>
                <fullName>pro Rechnungsnummer 1 SMV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>