unpackaged/main/default/objects/Account/fields/CL_ECEflatmediaGmbH__c.field-meta.xml
<CustomField>
    <fullName>CL_ECEflatmediaGmbH__c</fullName>
    <label>ECE flatmedia GmbH</label>
    <length>20</length>
    <type>Text</type>
</CustomField>