unpackaged/main/default/objects/Account/fields/CL_EMail__c.field-meta.xml
<CustomField>
    <fullName>CL_EMail__c</fullName>
    <inlineHelpText>allgem. E-Mail Adresse auf Account Ebene, z.B.  info@stroeer.de</inlineHelpText>
    <label>E-Mail</label>
    <type>Email</type>
</CustomField>