unpackaged/main/default/objects/Account/fields/CL_ersten_VIS_ID__c.field-meta.xml
<CustomField>
    <fullName>CL_ersten_VIS_ID__c</fullName>
    <label>Ersten VIS ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>