unpackaged/main/default/objects/Account/fields/CL_Fakturasperre__c.field-meta.xml
<CustomField>
    <fullName>CL_Fakturasperre__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fakturasperre</label>
    <type>Checkbox</type>
</CustomField>