unpackaged/main/default/objects/Account/fields/CL_FakturasperreGrund__c.field-meta.xml
<CustomField>
    <fullName>CL_FakturasperreGrund__c</fullName>
    <label>Fakturasperre Grund</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>***Kalkulation fehlt</fullName>
            </value>
            <value>
                <fullName>***Rückmeldung fehlt</fullName>
            </value>
            <value>
                <fullName>*** Preise unvollst.</fullName>
            </value>
            <value>
                <fullName>***Zahlungsbed. prüf</fullName>
            </value>
            <value>
                <fullName>***Lieferbeding prüf</fullName>
            </value>
            <value>
                <fullName>*** Gutschrift prüf</fullName>
            </value>
            <value>
                <fullName>*** Lastschrift prüf</fullName>
            </value>
            <value>
                <fullName>Nicht fakturieren</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>