unpackaged/main/default/objects/Account/fields/CL_Firmenname__c.field-meta.xml
<CustomField>
    <fullName>CL_Firmenname__c</fullName>
    <label>Firmenname</label>
    <length>35</length>
    <type>Text</type>
</CustomField>