unpackaged/main/default/objects/Account/fields/CL_FirmennameVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_FirmennameVorher__c</fullName>
    <label>Firmenname Vorher</label>
    <length>35</length>
    <type>Text</type>
</CustomField>