unpackaged/main/default/objects/Account/fields/CL_Firmenstatus__c.field-meta.xml
<CustomField>
    <fullName>CL_Firmenstatus__c</fullName>
    <defaultValue>&quot;Lead&quot;</defaultValue>
    <label>Firmenstatus</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
                <default>true</default>
                <label>Lead</label>
            </value>
            <value>
                <fullName>Potenzial</fullName>
            </value>
            <value>
                <fullName>non-Debitor Kunde</fullName>
            </value>
            <value>
                <fullName>Debitor Kunde</fullName>
            </value>
            <value>
                <fullName>Konzerndebitor</fullName>
            </value>
            <value>
                <fullName>Sonstige</fullName>
            </value>
            <value>
                <fullName>Debitor-Kunde</fullName>
                <isActive>false</isActive>
                <label>Debitor-Kunde</label>
            </value>
            <value>
                <fullName>Kunde</fullName>
                <isActive>false</isActive>
                <label>Kunde</label>
            </value>
            <value>
                <fullName>non-Debitor-Kunde</fullName>
                <isActive>false</isActive>
                <label>non-Debitor-Kunde</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>