unpackaged/main/default/objects/Account/fields/CL_FirmenstatusVorher__c.field-meta.xml
<CustomField>
    <fullName>CL_FirmenstatusVorher__c</fullName>
    <label>Firmenstatus Vorher</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potenzial</fullName>
            </value>
            <value>
                <fullName>non-Debitor Kunde</fullName>
            </value>
            <value>
                <fullName>Konzerndebitor</fullName>
            </value>
            <value>
                <fullName>Debitor Kunde</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>