unpackaged/main/default/objects/Account/fields/CL_GeaendertCS1__c.field-meta.xml
<CustomField>
    <fullName>CL_GeaendertCS1__c</fullName>
    <label>Geändert CS1 am</label>
    <type>Date</type>
</CustomField>