unpackaged/main/default/objects/Account/fields/CL_GeaendertCS2ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>CL_GeaendertCS2ReadOnly__c</fullName>
    <label>Geändert CS2 am</label>
    <type>Date</type>
</CustomField>