unpackaged/main/default/objects/Account/fields/CL_GecleartCS1__c.field-meta.xml
<CustomField>
    <fullName>CL_GecleartCS1__c</fullName>
    <label>Gecleart CS1 am</label>
    <type>Date</type>
</CustomField>