unpackaged/main/default/objects/Account/fields/CL_GecleartCS2__c.field-meta.xml
<CustomField>
    <fullName>CL_GecleartCS2__c</fullName>
    <label>Gecleart CS2 am</label>
    <type>Date</type>
</CustomField>