unpackaged/main/default/objects/Account/fields/CL_Gehoertzu__c.field-meta.xml
<CustomField>
    <fullName>CL_Gehoertzu__c</fullName>
    <label>Gehört zu</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Coca-Cola</fullName>
            </value>
            <value>
                <fullName>Deutsche Bahn</fullName>
            </value>
            <value>
                <fullName>Deutsche Telekom</fullName>
            </value>
            <value>
                <fullName>Ebay</fullName>
            </value>
            <value>
                <fullName>Otto</fullName>
            </value>
            <value>
                <fullName>Philip Morris</fullName>
            </value>
            <value>
                <fullName>Reemtsma</fullName>
            </value>
            <value>
                <fullName>REWE</fullName>
            </value>
            <value>
                <fullName>SevenOneMedia</fullName>
            </value>
            <value>
                <fullName>Telefonica</fullName>
            </value>
            <value>
                <fullName>Volkswagen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>