unpackaged/main/default/objects/Account/fields/CL_GeplAuftragsvolumenVG1__c.field-meta.xml
<CustomField>
    <fullName>CL_GeplAuftragsvolumenVG1__c</fullName>
    <label>Gepl. Auftragsvolumen (VG1)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>