unpackaged/main/default/objects/Account/fields/CL_Hauptaccount__c.field-meta.xml
<CustomField>
    <fullName>CL_Hauptaccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>bei zur Bearbeitung gesperrten Accounts (z.B. Dubletten, abweichende Rechnungsadresse)</description>
    <inlineHelpText>bei zur Bearbeitung gesperrten Accounts (z.B. Dubletten, abweichende Rechnungsadresse)</inlineHelpText>
    <label>Hauptaccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Zugeordnete Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>