unpackaged/main/default/objects/Account/fields/CL_Helper_DELETE_Account__c.field-meta.xml
<CustomField>
    <fullName>CL_Helper_DELETE_Account__c</fullName>
    <description>wird auf das Datum durch PG gesetzt, an dem dieser Account zu löschen ist</description>
    <label>Helper DELETE Account</label>
    <type>Date</type>
</CustomField>