unpackaged/main/default/objects/Account/fields/CL_HelperAnzahlVG__c.field-meta.xml
<CustomField>
    <fullName>CL_HelperAnzahlVG__c</fullName>
    <label>Helper Anzahl VG</label>
    <summaryForeignKey>CL_Vertriebsgesellschaft__c.CL_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>