unpackaged/main/default/objects/Account/fields/CL_HelperDebitorenNeuAnlageausSF2__c.field-meta.xml
<CustomField>
    <fullName>CL_HelperDebitorenNeuAnlageausSF2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>dient zur Umgehung der Validierung VG1 , wenn Account aus SF2 durch positives Cs1 Clearing neu angelegt wird.</description>
    <label>Helper NeuAnlage aus SF2</label>
    <type>Checkbox</type>
</CustomField>