unpackaged/main/default/objects/Account/fields/CL_HelperEmailangefordertVon__c.field-meta.xml
<CustomField>
    <fullName>CL_HelperEmailangefordertVon__c</fullName>
    <description>Hilfsfeld für Email Versand, bei CS1Clearing Ablehnung</description>
    <label>Helper E-mail angefordert von</label>
    <type>Email</type>
</CustomField>