unpackaged/main/default/objects/Account/fields/CL_HelperUpgradezuDebitor__c.field-meta.xml
<CustomField>
    <fullName>CL_HelperUpgradezuDebitor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>wird von Trigger gesetzt, wenn ein Account mit bisherigem Firmenstatus non-Debitor oder Potenzial zu Debnitor hochgestuf wird. Wird von VIS benötigt, um Datensätze zusammenhängend zu SAP zu übertragen</description>
    <label>Helper Upgrade zu Debitor</label>
    <type>Checkbox</type>
</CustomField>